[package]
name = "porward"
version = "0.1.0"
authors = ["Hamed Zaghaghi <hamed.zaghaghi@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
aws-config = "1.5.13"
aws-sdk-dynamodb = "1.59.0"
tokio = { version = "1.43.0", features = ["full"] }
aws-types = "1.3.3"
aws-runtime = "1.5.3"
aws-sdk-ec2 = "1.100.0"
