[package]
name = "porward"
version = "0.1.0"
authors = ["Hamed Zaghaghi <hamed.zaghaghi@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
aws-config = "1.5.15"
tokio = { version = "1.43.0", features = ["full"] }
aws-types = "1.3.3"
aws-runtime = "1.5.3"
aws-sdk-ec2 = "1.107.0"
aws-sdk-elasticloadbalancingv2 = "1.65.0"
aws-sdk-rds = "1.73.0"
aws-sdk-elasticache = "1.62.0"
